# rust-tsx-todo

./: package-lock.json
backend/: .env  Cargo.toml
backend/migrations/: 20250306103648_db.sql  20250309044025_data.sql
backend/src/: main.rs
frontend/src/: App.tsx
