[package]
name = "rust-project"
version = "0.1.0"
edition = "2024"

[dependencies]

# server
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.44.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "chrono"]}

